@@ -21,12 +21,14 @@ rdynamic="-rdynamic"
 PIC=
 DLLEXT=".so"
 AUXLIBS=
+LD_LIB_PATH="LD_LIBRARY_PATH"
 case "$host" in
     *-*-mingw*)       AUXLIBS="-DLIBGLOB='\"libglob.dll\"' -DLIBREGEX='\"libgnurx-0.dll\"'";
                       LIBS="$LIBS -limagehlp -lpsapi";
                       LDFLAGS="-Wl,--enable-auto-import"; DLLEXT=".dll";;
     x86_64-*-linux*)  PIC="-fPIC";;
-    *-*-darwin*)      rdynamic=""; shared="-dynamiclib"; DLLEXT=".dylib";;
+    *-*-darwin*)      LD_LIB_PATH="DYLD_LIBRARY_PATH";
+                      rdynamic=""; shared="-dynamiclib -install_name \$(libdir)/\$(libpure)"; DLLEXT=".dylib";;
     hppa*-hp-hpux*)   rdynamic=""; DLLEXT=".sl";;
 esac
 AC_SUBST(shared)
@@ -34,6 +36,7 @@ AC_SUBST(rdynamic)
 AC_SUBST(PIC)
 AC_SUBST(DLLEXT)
 AC_SUBST(AUXLIBS)
+AC_SUBST(LD_LIB_PATH)
 AC_DEFINE_UNQUOTED(DLLEXT, "${DLLEXT}", [Define to the filename extension for shared libraries.])
 dnl Check for programs.
 AC_PROG_INSTALL
